# pycfdns

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  publish.yml  test.yml
pycfdns/: __init__.py  client.py  const.py  exceptions.py  logger.py  models.py  updater.py
