[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Ludeeus <ludeeus@ludeeus.dev>"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
description = "Cloudflare DNS API Python Wrapper"
exclude = ['**/__pycache__']
include = ["pycfdns", "pycfdns.*", "LICENCE"]
license = "MIT"
maintainers = ["Ludeeus <ludeeus@ludeeus.dev>"]
name = "pycfdns"
readme = "README.md"
repository = "https://github.com/ludeeus/pycfdns"
version = "0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
isort = "^5.12.0"
mypy = "^1.6"
pylint = "^4.0.0"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = 'generated'

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"
